--- a/style/screen-menu.scss
+++ b/style/screen-menu.scss
@@ -84,7 +84,7 @@ $logo-row-height: min(20vw, 20vh);
       aspect-ratio: 1 / 1;
       min-width: 0;
       min-height: 0;
-      max-width: 60vh;
+      max-width: min(60vh, 40vw);
       max-height: 60vh;
       &.game-button-pressed,
       &:hover {
