--- a/style/screen-game.scss
+++ b/style/screen-game.scss
@@ -208,6 +208,23 @@
   &.tile-drag-return {
     z-index: 100;
   }
+
+  &.appear {
+    animation-name: tile-on-stack-appear-anim;
+    animation-duration: 0.2s;
+    animation-timing-function: linear;
+  }
+}
+@keyframes tile-on-stack-appear-anim {
+  0% {
+    opacity: 0;
+  }
+  5% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .rotatable {
