--- a/style/base.scss
+++ b/style/base.scss
@@ -28,6 +28,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Barlow", sans-serif;
+  -webkit-tap-highlight-color: transparent;
   -webkit-user-select: none;
   user-select: none;
   touch-action: none;
