--- a/style/base.scss
+++ b/style/base.scss
@@ -29,6 +29,10 @@ body {
   padding: 0;
   font-family: "Barlow", sans-serif;
   -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
   -webkit-user-select: none;
   user-select: none;
   touch-action: none;
