--- a/style/screen-menu.scss
+++ b/style/screen-menu.scss
@@ -1,7 +1,6 @@
 @use "./colors.scss";
 
 $logo-height: min(15vw, 10vh);
-$logo-row-height: min(20vw, 20vh);
 
 .screen.main-menu {
   display: flex;
@@ -20,11 +19,14 @@ $logo-row-height: min(20vw, 20vh);
     height: 100%;
     max-width: 100vw;
     max-height: 100vh;
-    padding-bottom: 30px;
+    padding: calc(
+        max(colors.$button-top, colors.$button-bottom) + colors.$button-scale
+      )
+      0;
     box-sizing: border-box;
     display: grid;
     grid-template:
-      "spacer" 1fr
+      "spacer" 0.75fr
       "example-grid" max-content
       "logo" 1fr / 1fr;
   }
@@ -37,14 +39,6 @@ $logo-row-height: min(20vw, 20vh);
     justify-content: center;
     padding-top: 5vh;
     width: 100%;
-    min-height: $logo-row-height;
-    max-height: $logo-row-height;
-
-    @media screen and (min-aspect-ratio: 4 / 5) and (max-aspect-ratio: 3 / 2) {
-      align-items: center;
-      align-self: center;
-      padding-top: 0;
-    }
 
     svg {
       height: $logo-height;
@@ -54,14 +48,14 @@ $logo-row-height: min(20vw, 20vh);
 
   .button-setup-menu {
     position: absolute;
-    top: 3vw;
-    right: 3vw;
+    top: colors.$button-top;
+    right: colors.$button-right;
   }
 
   .button-paint-menu {
     position: absolute;
-    top: 3vw;
-    right: calc(3vw + 2.5 * colors.$button-scale);
+    top: colors.$button-top;
+    right: calc(1.25 * colors.$button-scale + colors.$button-right);
   }
 
   .game-list {
@@ -72,7 +66,7 @@ $logo-row-height: min(20vw, 20vh);
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: min(4vh, 4vw);
     row-gap: min(4vw, 4vh);
-    padding: 0% 10% 0 10%;
+    padding: 0% calc(10% + colors.$inset-right) 0 calc(10% + colors.$inset-left);
     box-sizing: border-box;
 
     .example-tile {
@@ -97,9 +91,15 @@ $logo-row-height: min(20vw, 20vh);
     .game-list {
       justify-self: auto;
       padding: 0;
-      height: min(65vh, 85vw);
-      max-height: 70vh;
-      max-width: min(100vh, 100vw, 70vh);
+      height: calc(
+        min(65vh - colors.$button-top - colors.$button-bottom, 85vw)
+      );
+      max-height: calc(65vh - colors.$button-top - colors.$button-bottom);
+      max-width: min(
+        100vh,
+        100vw,
+        calc(65vh - colors.$button-top - colors.$button-bottom)
+      );
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
     }
