--- a/style/base.scss
+++ b/style/base.scss
@@ -24,7 +24,7 @@
 }
 
 body {
-  background: colors.$main-bg;
+  background: var(--main-bg-color);
   margin: 0;
   padding: 0;
   font-family: "Barlow", sans-serif;
