--- a/style/colors.scss
+++ b/style/colors.scss
@@ -4,26 +4,89 @@ $maintint: hsl(42deg, 5%, 50%);
 $green: hsl(80deg, 64%, 50%);
 $blue: hsl(214deg, 64%, 50%);
 
-$main-bg: color.change($maintint, $lightness: 87%);
-$panel-bg: color.change($maintint, $lightness: 70%);
-$dropout-bg: color.change($maintint, $lightness: 95%);
-$settings-option-panel-bg: color.change($maintint, $lightness: 80%);
-$settings-option-panel-bg-active: color.change($maintint, $lightness: 93%);
-$settings-option-panel-bg-hover: color.change($maintint, $lightness: 87%);
+:root {
+  // main backgrounds
+  --main-bg-color: #{color.change($maintint, $lightness: 87%)};
+  --panel-bg-color: #{color.change($maintint, $lightness: 70%)};
+  --dropout-bg-color: #{color.change($maintint, $lightness: 95%)};
 
-$score-display-fg: color.change($green, $lightness: 32%);
-$score-display-bg: color.change($green, $lightness: 85%);
+  // COMPONENTS
 
-$toggle-fg: color.change($green, $lightness: 32%);
-$toggle-bg: color.change($green, $lightness: 85%);
+  // toggle colors
+  --toggle-icon-color: rgba(0, 0, 0, 35%);
+  --toggle-fg-enabled-color: #{color.change($green, $lightness: 32%)};
+  --toggle-bg-enabled-color: #{color.change($green, $lightness: 85%)};
+  --toggle-fg-disabled-color: rgba(0, 0, 0, 25%);
+  --toggle-bg-disabled-color: rgba(0, 0, 0, 8%);
 
-$setup-play-button-bg: color.change($green, $lightness: 32%);
-$setup-play-button-bg-disabled: rgba(0, 0, 0, 10%);
-$setup-play-button-fg: color.change($green, $lightness: 95%);
+  // button colors
+  --button-fg-color: rgba(0, 0, 0, 35%);
+  --button-bg-color: rgba(0, 0, 0, 8%);
+  --button-bg-pressed-color: rgba(0, 0, 0, 15%);
+  --button-bg-hover-color: rgba(0, 0, 0, 25%);
+  --button-bg-selected-color: rgba(0, 0, 0, 70%);
 
-$home-button-bg: color.change($blue, $lightness: 32%);
-$home-button-fg: color.change($blue, $lightness: 97%);
-$home-button-fg-hover: color.change($blue, $lightness: 97%);
+  // large play button in the setup screen
+  --setup-play-button-bg-color: #{color.change($green, $lightness: 32%)};
+  --setup-play-button-bg-disabled-color: rgba(0, 0, 0, 10%);
+  --setup-play-button-fg-color: #{color.change($green, $lightness: 95%)};
+  --setup-play-button-fg-disabled-color: rgba(255, 255, 255, 30%);
+
+  // home button in the play screen
+  --home-button-bg-color: #{color.change($blue, $lightness: 32%)};
+  --home-button-fg-color: #{color.change($blue, $lightness: 97%)};
+  --home-button-fg-hover-color: #{color.change($blue, $lightness: 97%)};
+
+  // SETUP SCREEN
+
+  // settings menu options
+  --settings-option-panel-bg-color: #{color.change($maintint, $lightness: 80%)};
+  --settings-option-panel-bg-active-color: #{color.change(
+      $maintint,
+      $lightness: 93%
+    )};
+  --settings-option-panel-bg-hover-color: #{color.change(
+      $maintint,
+      $lightness: 87%
+    )};
+  --settings-option-panel-border-active-color: #66f;
+
+  // warning symbol for invalid grid in setup menu
+  --invalid-grid-warning-color: #e06300;
+
+  // GAME SCREEN
+
+  // score display in the tile stack
+  --score-display-fg-color: #{color.change($green, $lightness: 32%)};
+  --score-display-bg-color: #{color.change($green, $lightness: 85%)};
+
+  // tile counter
+  --tile-counter-text-color: hsl(0deg, 0%, 47%);
+  --tile-counter-border-color: hsl(0deg, 0%, 60%);
+
+  // placeholder tile colors
+  --placeholder-fill-color: #{hsla(0deg, 0%, 80%, 0.5)};
+  --placeholder-stroke-color: #{hsl(0deg, 0%, 80%)};
+
+  // colors for ScoreOverlayDisplay_Cutout
+  // - background of the outline, should match screen background
+  --cutout-outline-bg-color: var(--main-bg-color);
+  // - colored outline around the shape
+  --cutout-outline-fg-color: hsl(80deg, 61%, 50%);
+  // - points circle
+  --cutout-circle-points-fill-color: hsl(80deg, 61%, 85%);
+  --cutout-circle-points-stroke-color: hsl(80deg, 61%, 32%);
+
+  // MAIN SCREEN
+
+  // main screen footer
+  --footer-version-color: #aaa;
+  --footer-copyright-color: #777;
+  --footer-link-hover-color: #000;
+
+  // logo on main screen
+  --logo-fill-color: rgba(0, 0, 0, 35%);
+}
 
 // safe areas
 :root {
