--- a/style/grid-display.scss
+++ b/style/grid-display.scss
@@ -1,3 +1,5 @@
+@use "./colors.scss";
+
 .grid-display,
 .grid-display .grid,
 .grid-display .grid svg {
@@ -12,6 +14,9 @@
 }
 
 .svg-placeholder {
+  fill: var(--placeholder-fill-color);
+  stroke: var(--placeholder-stroke-color);
+
   transition-property: opacity;
   transition-duration: 100ms;
 
